// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProposalSubmitButtonComponent snapshot must match the snapshot by default 1`] = `
.c3 {
  display: none;
  visibility: hidden;
}

.c1 {
  margin-right: 0.375rem;
}

.c0 {
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Roboto Condensed Bold',Arial,serif;
  font-size: 0.875rem;
  border: none;
  border-radius: 1.875rem;
  text-transform: uppercase;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
  padding: 0.3125rem 0.9375rem;
  color: rgb(255,255,255);
  background-color: rgb(118,118,118);
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.2);
  padding: 0.3125rem 0.625rem;
}

.c2 {
  margin-right: 0.375rem;
  margin: 0;
}

@media (min-width:47.94rem) {
  .c3 {
    display: block;
    visibility: visible;
  }
}

@media (min-width:47.94rem) {
  .c1 {
    margin-right: 0.625rem;
  }
}

@media (min-width:47.94rem) {
  .c0 {
    font-size: 1rem;
    padding: 0.5625rem 1.25rem;
  }
}

@media (min-width:47.94rem) {
  .c2 {
    margin-right: 0.625rem;
  }
}

<button
  className="c0"
  disabled={true}
  id="proposal-submit-button"
  type="submit"
>
  <span
    className="sc-1wm8iti-6 c1 1 c2"
  >
    <svg
      icon="pencil-alt"
      lib="@fortawesome/react-fontawesome"
      prefix="fas"
    />
  </span>
  <div
    className="c3 mvkq91-1 c3"
  >
    common.propose
  </div>
</button>
`;

exports[`ProposalSubmitButtonComponent snapshot must match the snapshot if field is collapsed 1`] = `
.c3 {
  display: none;
  visibility: hidden;
}

.c1 {
  margin-right: 0.375rem;
}

.c0 {
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Roboto Condensed Bold',Arial,serif;
  font-size: 0.875rem;
  border: none;
  border-radius: 1.875rem;
  text-transform: uppercase;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
  padding: 0.3125rem 0.9375rem;
  color: rgb(255,255,255);
  background-color: rgb(118,118,118);
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.2);
  padding: 0.3125rem 0.625rem;
}

.c2 {
  margin-right: 0.375rem;
  margin: 0;
}

@media (min-width:47.94rem) {
  .c3 {
    display: block;
    visibility: visible;
  }
}

@media (min-width:47.94rem) {
  .c1 {
    margin-right: 0.625rem;
  }
}

@media (min-width:47.94rem) {
  .c0 {
    font-size: 1rem;
    padding: 0.5625rem 1.25rem;
  }
}

@media (min-width:47.94rem) {
  .c2 {
    margin-right: 0.625rem;
  }
}

<button
  className="c0"
  disabled={true}
  id="proposal-submit-button"
  type="submit"
>
  <span
    className="sc-1wm8iti-6 c1 1 c2"
  >
    <svg
      icon="pencil-alt"
      lib="@fortawesome/react-fontawesome"
      prefix="fas"
    />
  </span>
  <div
    className="c3 mvkq91-1 c3"
  >
    common.propose
  </div>
</button>
`;

exports[`ProposalSubmitButtonComponent snapshot must match the snapshot if field is expanded 1`] = `
.c2 {
  display: none;
  visibility: hidden;
}

.c1 {
  margin-right: 0.375rem;
}

.c0 {
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Roboto Condensed Bold',Arial,serif;
  font-size: 0.875rem;
  border: none;
  border-radius: 1.875rem;
  text-transform: uppercase;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
  padding: 0.3125rem 0.9375rem;
  color: rgb(255,255,255);
  background-color: rgb(118,118,118);
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.2);
  padding: 0.3125rem 0.625rem;
}

.c3 {
  display: inline;
  visibility: visible;
}

@media (min-width:47.94rem) {
  .c2 {
    display: block;
    visibility: visible;
  }
}

@media (min-width:47.94rem) {
  .c1 {
    margin-right: 0.625rem;
  }
}

@media (min-width:47.94rem) {
  .c0 {
    font-size: 1rem;
    padding: 0.5625rem 1.25rem;
  }
}

<button
  className="c0"
  disabled={true}
  id="proposal-submit-button"
  type="submit"
>
  <span
    className="c1 sc-1wm8iti-6 c1"
  >
    <svg
      icon="pencil-alt"
      lib="@fortawesome/react-fontawesome"
      prefix="fas"
    />
  </span>
  <span
    className="c2 2 c3"
  >
    common.propose
  </span>
</button>
`;

exports[`ProposalSubmitButtonComponent snapshot must match the snapshot if user can submit 1`] = `
.c3 {
  display: none;
  visibility: hidden;
}

.c1 {
  margin-right: 0.375rem;
}

.c0 {
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Roboto Condensed Bold',Arial,serif;
  font-size: 0.875rem;
  border: none;
  border-radius: 1.875rem;
  text-transform: uppercase;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
  padding: 0.3125rem 0.9375rem;
  color: rgb(255,255,255);
  background-color: rgb(232,24,68);
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.5);
  padding: 0.3125rem 0.625rem;
}

.c2 {
  margin-right: 0.375rem;
  margin: 0;
}

@media (min-width:47.94rem) {
  .c3 {
    display: block;
    visibility: visible;
  }
}

@media (min-width:47.94rem) {
  .c1 {
    margin-right: 0.625rem;
  }
}

@media (min-width:47.94rem) {
  .c0 {
    font-size: 1rem;
    padding: 0.5625rem 1.25rem;
  }
}

@media (min-width:47.94rem) {
  .c2 {
    margin-right: 0.625rem;
  }
}

<button
  className="0 c0"
  id="proposal-submit-button"
  tabIndex={0}
  type="submit"
>
  <span
    className="sc-1wm8iti-6 c1 1 c2"
  >
    <svg
      icon="pencil-alt"
      lib="@fortawesome/react-fontawesome"
      prefix="fas"
    />
  </span>
  <div
    className="c3 mvkq91-1 c3"
  >
    common.propose
  </div>
</button>
`;

exports[`ProposalSubmitButtonComponent snapshot must match the snapshot if user can't submit 1`] = `
.c3 {
  display: none;
  visibility: hidden;
}

.c1 {
  margin-right: 0.375rem;
}

.c0 {
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Roboto Condensed Bold',Arial,serif;
  font-size: 0.875rem;
  border: none;
  border-radius: 1.875rem;
  text-transform: uppercase;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
  padding: 0.3125rem 0.9375rem;
  color: rgb(255,255,255);
  background-color: rgb(118,118,118);
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.2);
  padding: 0.3125rem 0.625rem;
}

.c2 {
  margin-right: 0.375rem;
  margin: 0;
}

@media (min-width:47.94rem) {
  .c3 {
    display: block;
    visibility: visible;
  }
}

@media (min-width:47.94rem) {
  .c1 {
    margin-right: 0.625rem;
  }
}

@media (min-width:47.94rem) {
  .c0 {
    font-size: 1rem;
    padding: 0.5625rem 1.25rem;
  }
}

@media (min-width:47.94rem) {
  .c2 {
    margin-right: 0.625rem;
  }
}

<button
  className="c0"
  disabled={true}
  id="proposal-submit-button"
  type="submit"
>
  <span
    className="sc-1wm8iti-6 c1 1 c2"
  >
    <svg
      icon="pencil-alt"
      lib="@fortawesome/react-fontawesome"
      prefix="fas"
    />
  </span>
  <div
    className="c3 mvkq91-1 c3"
  >
    common.propose
  </div>
</button>
`;
